# gt-annotate

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  VERSIONS.md  config.json
Dlib/include/: dlibnetwork.h  dnn_instance.h
Dlib/src/: dlibnetwork.cc
clone_build/: dlib.in  spdlog.in  utils.in
config/: config.json  postprocess.json
gtest/: gtest.cc  gtest_configreader.cc  gtest_configreader.h  gtest_contour.cc  gtest_contour.h  gtest_listvector.cc  gtest_listvector.h  gtest_view.cc  gtest_view.h  test.json
gtest_files/test_dataset1/: test1.json
gtest_files/test_dataset2/: test2.json
include/: configreader.h  graphicsscene.h  graphicsview.h  mainwindow.h  structures.h  view.h
include/imageprocessing/: contour.h
include/utils/: configreader.h  includespdlog.h  listvector.h
include/widgets/: colorpicker.h  colorpickerlabel.h  colorpickerwidget.h  graphicsrectitem.h  graphicsscene.h  graphicsview.h  painter.h  paintersettings.cc  paintersettings.h  pensizepicker.h  structures.h  toolbar.h  treewidget.h  view.h
include/widgets/view/: colorpicker.h  colorpickerlabel.h  colorpickerwidget.h  graphicspixmapitem.h  graphicsrectitem.h  graphicsscene.h  graphicsview.h  labeldialog.h  painter.h  paintersettings.h  pensizepicker.h  rect.h  view.h
include/widgets/view/data/: datainfo.h  datawidget.h  roiwidget.h  treewidget.h
src/: configreader.cc  graphicsscene.cc  graphicsview.cc  includespdlog.cc  main.cc  mainwindow.cc  view.cc
src/imageprocessing/: contour.cc
src/utils/: configreader.cc  includespdlog.cc  listvector.cc
src/widgets/: colorpicker.cc  colorpickerlabel.cc  colorpickerwidget.cc  graphicspixmapitem.cc  graphicsrectitem.cc  graphicsscene.cc  graphicsview.cc  painter.cc  paintersettings.cc  pensizepicker.cc  toolbar.cc  treewidget.cc  view.cc
src/widgets/view/: colorpicker.cc  colorpickerlabel.cc  colorpickerwidget.cc  graphicspixmapitem.cc  graphicsrectitem.cc  graphicsscene.cc  graphicsview.cc  labeldialog.cc  painter.cc  paintersettings.cc  pensizepicker.cc  rect.cc  toolbar.cc  view.cc
src/widgets/view/data/: datainfo.cc  datawidget.cc  roiwidget.cc  treewidget.cc
temp/: datamemory.cc  datamemory.h
